--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,29 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>uberdust</groupId>
-        <artifactId>uberdust</artifactId>
-        <version>1.0</version>
-    </parent>
-
     <groupId>uberdust</groupId>
     <artifactId>testbedlistener</artifactId>
     <packaging>jar</packaging>
     <name>ÜberDust - Testbed Listener</name>
+    <description>Application for collecting data from a sensor Testbed</description>
+    <url>http://uberdust.cti.gr</url>
     <version>1.0</version>
     <properties>
         <jetty-version>8.0.4.v20111024</jetty-version>
     </properties>
 
     <repositories>
+        <repository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/2/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>codehaus</id>
+            <name>Maven Codehaus repository</name>
+            <url>http://repository.codehaus.org/</url>
+        </repository>
         <repository>
             <id>java.net</id>
             <name>java.net</name>
@@ -60,6 +67,11 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>hudson.plugins.sloccount</groupId>
+            <artifactId>sloccount</artifactId>
+            <version>1.4</version>
+        </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
