--- a/pom.xml
+++ b/pom.xml
@@ -298,17 +298,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>2.6</version>
+                <version>2.8</version>
                 <configuration>
-                    <configLocation>${main.basedir}/sun_checks.xml</configLocation>
-                    <suppressionsLocation>${main.basedir}/suppresions.xml</suppressionsLocation>
+                    <configLocation>sun_checks.xml</configLocation>
+                    <suppressionsLocation>suppresions.xml</suppressionsLocation>
                     <excludes>**/controller/protobuf/**/*</excludes>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.5</version>
+                <version>2.7</version>
+
                 <configuration><!--linkXref>true</linkXref-->
                     <sourceEncoding>utf-8</sourceEncoding>
                     <minimumTokens>100</minimumTokens>
@@ -343,9 +344,9 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>2.4.1-SNAPSHOT</version>
                 <configuration>
-                    <findbugsXmlOutput>true</findbugsXmlOutput>
+                    <!--<findbugsXmlOutput>true</findbugsXmlOutput>-->
                     <!-- Optional directory to put findbugs xml report -->
                     <findbugsXmlOutputDirectory>target/site</findbugsXmlOutputDirectory>
                 </configuration>
