--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -52,6 +52,7 @@ log4j.appender.UtilFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}
 log4j.logger.eu.uberdust.util=INFO,UtilFileAppender
 
 log4j.logger.eu.uberdust.controller=INFO,ControllerFileAppender
+log4j.logger.eu.uberdust.network=INFO,ControllerFileAppender
 
 log4j.logger.eu.uberdust.datacollector=INFO,ListenerFileAppender
 log4j.logger.eu.uberdust.communication=INFO,ListenerFileAppender
