--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,11 @@
             <artifactId>quartz</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.4.1</version>
+        </dependency>
     </dependencies>
     <build>
         <resources>
