--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-pmd-plugin</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <dependency>
             <groupId>uberdust</groupId>
             <artifactId>NetworkManager</artifactId>
             <version>1.0</version>
