loging format and commands for generic implementation

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -21,7 +21,7 @@ log4j.appender.ControllerFileAppender.File=logs/controller.log
 log4j.appender.ControllerFileAppender.MaxFileSize=5MB
 log4j.appender.ControllerFileAppender.MaxBackupIndex=2
 log4j.appender.ControllerFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.ControllerFileAppender.layout.ConversionPattern= %-4r [%t] %-5p %c %x - %m%n
+log4j.appender.ControllerFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
 # Listener logger - used to log messages of the listener app
 log4j.appender.NodeFlasherFileAppender=org.apache.log4j.RollingFileAppender
