Adding XBeeController on TestbedListener

--- a/src/main/resources/testbedlistener.properties.template
+++ b/src/main/resources/testbedlistener.properties.template
@@ -1,3 +1,10 @@
+#Backend Type: xbee fro XBee and tr for testbed runtime.
+backend.type=tr
+
+#XBee Configutation
+xbee.baudrate=
+xbee.port=
+
 #change to 1 to start the application
 use.datacollector=0
 use.nodeflasher=0
@@ -24,6 +31,9 @@ sensors.names=temperature,humidity,ir,co,co2,ch4,light,batterycharge,barometricp
 sensors.prefixes=EM_T,EM_H,EM_I,SVal1:,SVal2:,SVal3:,EM_L,BA_C,EM_P,RL1,RL2,RL3,RL4,EM_E,CS
 device.Types=iSense::,airquality::,id::
 
+#xbeecollector related properties
+sensor.capabilities=temperature,humidity,ir,co,co2,ch4,light,batterycharge,barometricpressure,pir,pressure,test,description
+sensor.capabilities_index=0,3,2,4,5,6,1,11,7,13,99,100
 
 #nodeflasher related properties
 nodes.isense=urn:wisebed:ctitestbed:0x296,urn:wisebed:ctitestbed:0xcaa,urn:wisebed:ctitestbed:0x1c98,urn:wisebed:ctitestbed:0x295,urn:wisebed:ctitestbed:0x1b77,urn:wisebed:ctitestbed:0x9979,urn:wisebed:ctitestbed:0x153d,urn:wisebed:ctitestbed:0x585,urn:wisebed:ctitestbed:0x786a,urn:wisebed:ctitestbed:0xca3,urn:wisebed:ctitestbed:0x1cde
