--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,16 @@
             <version>2.7</version>
         </dependency>
         <dependency>
+            <groupId>mksense</groupId>
+            <artifactId>XbeeLib</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rxtx</groupId>
+            <artifactId>rxtx</artifactId>
+            <version>2.1.7</version>
+        </dependency>
+        <dependency>
             <groupId>uberdust</groupId>
             <artifactId>NetworkManager</artifactId>
             <version>1.0</version>
