--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -40,15 +40,15 @@ log4j.appender.UtilFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.UtilFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
 
-log4j.logger.eu.uberdust.controller=INFO,ControllerFileAppender
-log4j.logger.eu.uberdust.datacollector=INFO,ListenerFileAppender
-log4j.logger.eu.uberdust.nodeflasher=INFO,NodeFlasherFileAppender
+log4j.logger.eu.uberdust.controller=INFO,stdout
+log4j.logger.eu.uberdust.datacollector=INFO,stdout
+log4j.logger.eu.uberdust.nodeflasher=INFO,stdout
 
-log4j.logger.eu.uberdust.util=INFO,UtilFileAppender
+log4j.logger.eu.uberdust.util=INFO,stdout
 
-log4j.logger.eu.uberdust.network=INFO,ControllerFileAppender
+log4j.logger.eu.uberdust.network=INFO,stdout
 
-log4j.logger.eu.uberdust.communication=INFO,ListenerFileAppender
+log4j.logger.eu.uberdust.communication=INFO,stdout
 
-log4j.logger.eu.uberdust.TestbedListener=INFO,NodeFlasherFileAppender
+log4j.logger.eu.uberdust.TestbedListener=INFO,stdout
 
