--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -46,9 +46,9 @@ log4j.logger.eu.uberdust.nodeflasher=INFO,stdout
 
 log4j.logger.eu.uberdust.util=INFO,stdout
 
-log4j.logger.eu.uberdust.network=INFO,stdout
+log4j.logger.eu.uberdust.network=FATAL,stdout
 
-log4j.logger.eu.uberdust.communication=INFO,stdout
+log4j.logger.eu.uberdust.communication=FATAL,stdout
 
 log4j.logger.eu.uberdust.TestbedListener=INFO,stdout
 
