working on coap

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -40,6 +40,7 @@ log4j.appender.UtilFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.UtilFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
 
+log4j.logger.eu.uberdust.coap=INFO,stdout
 log4j.logger.eu.uberdust.controller=INFO,stdout
 log4j.logger.eu.uberdust.datacollector=INFO,stdout
 log4j.logger.eu.uberdust.nodeflasher=INFO,stdout
