--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -43,7 +43,7 @@ log4j.appender.UtilFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}
 log4j.logger.eu.uberdust.coap=INFO,stdout
 log4j.logger.eu.uberdust.controller=INFO,stdout
 log4j.logger.eu.uberdust.datacollector=INFO,stdout
-log4j.logger.eu.uberdust.nodeflasher=INFO,stdout
+log4j.logger.eu.uberdust.testbedlistener.nodeflasher=INFO,stdout
 
 log4j.logger.eu.uberdust.util=INFO,stdout
 
