fixes on udp COAP server

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -40,16 +40,17 @@ log4j.appender.UtilFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.UtilFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
 
-log4j.logger.eu.uberdust.coap=INFO,stdout
-log4j.logger.eu.uberdust.controller=INFO,stdout
-log4j.logger.eu.uberdust.datacollector=INFO,stdout
-log4j.logger.eu.uberdust.testbedlistener.nodeflasher=INFO,stdout
+log4j.logger.eu.uberdust.testbedlistener=INFO,stdout
+#log4j.logger.eu.uberdust.coap=INFO,stdout
+#log4j.logger.eu.uberdust.controller=INFO,stdout
+#log4j.logger.eu.uberdust.datacollector=INFO,stdout
+#log4j.logger.eu.uberdust.testbedlistener.nodeflasher=INFO,stdout
 
-log4j.logger.eu.uberdust.util=INFO,stdout
+#log4j.logger.eu.uberdust.util=INFO,stdout
 
-log4j.logger.eu.uberdust.network=FATAL,stdout
+#log4j.logger.eu.uberdust.network=FATAL,stdout
 
-log4j.logger.eu.uberdust.communication=FATAL,stdout
+#log4j.logger.eu.uberdust.communication=FATAL,stdout
 
-log4j.logger.eu.uberdust.TestbedListener=INFO,stdout
+#log4j.logger.eu.uberdust.TestbedListener=INFO,stdout
 
