small fixes and improvements to coap server

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-log4j.appender.stdout.Threshold=info
+log4j.appender.stdout.Threshold=debug
 
 # Listener logger - used to log messages of the listener app
 log4j.appender.ListenerFileAppender=org.apache.log4j.RollingFileAppender
@@ -40,7 +40,14 @@ log4j.appender.UtilFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.UtilFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
 
-log4j.logger.eu.uberdust.testbedlistener=INFO,stdout
+#log4j.logger.eu.uberdust.testbedlistener.controller=INFO,stdout
+#log4j.logger.eu.uberdust.devicedriver=INFO,stdout
+#log4j.logger.eu.uberdust.TestbedListener=INFO,stdout
+#log4j.logger.eu.uberdust.communication.websocket.command=INFO,stdout
+log4j.logger.eu.uberdust=DEBUG,ListenerFileAppender
+#log4j.logger.eu.mksense=DEBUG,stdout
+
+
 #log4j.logger.eu.uberdust.coap=INFO,stdout
 #log4j.logger.eu.uberdust.controller=INFO,stdout
 #log4j.logger.eu.uberdust.datacollector=INFO,stdout
