--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,6 +16,14 @@ log4j.appender.ListenerFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.ListenerFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
 # Listener logger - used to log messages of the listener app
+log4j.appender.CollectorFileAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.CollectorFileAppender.File=logs/collector.log
+log4j.appender.CollectorFileAppender.MaxFileSize=5MB
+log4j.appender.CollectorFileAppender.MaxBackupIndex=2
+log4j.appender.CollectorFileAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.CollectorFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
+
+# Listener logger - used to log messages of the listener app
 log4j.appender.ControllerFileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.ControllerFileAppender.File=logs/controller.log
 log4j.appender.ControllerFileAppender.MaxFileSize=5MB
@@ -24,12 +32,12 @@ log4j.appender.ControllerFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.ControllerFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
 # Listener logger - used to log messages of the listener app
-log4j.appender.NodeFlasherFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.NodeFlasherFileAppender.File=logs/nodeFlasher.log
-log4j.appender.NodeFlasherFileAppender.MaxFileSize=5MB
-log4j.appender.NodeFlasherFileAppender.MaxBackupIndex=2
-log4j.appender.NodeFlasherFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.NodeFlasherFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
+log4j.appender.CoapFileAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.CoapFileAppender.File=logs/coap.log
+log4j.appender.CoapFileAppender.MaxFileSize=5MB
+log4j.appender.CoapFileAppender.MaxBackupIndex=2
+log4j.appender.CoapFileAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.CoapFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
 # Listener logger - used to log messages of the listener app
 log4j.appender.UtilFileAppender=org.apache.log4j.RollingFileAppender
@@ -40,24 +48,13 @@ log4j.appender.UtilFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.UtilFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
 
-#log4j.logger.eu.uberdust.testbedlistener.controller=INFO,stdout
-#log4j.logger.eu.uberdust.devicedriver=INFO,stdout
-#log4j.logger.eu.uberdust.TestbedListener=INFO,stdout
-#log4j.logger.eu.uberdust.communication.websocket.command=INFO,stdout
-log4j.logger.eu.uberdust=DEBUG,ListenerFileAppender
-#log4j.logger.eu.mksense=DEBUG,stdout
 
+log4j.logger.eu.uberdust.testbedlistener.coap=INFO,CoapFileAppender
+log4j.logger.eu.uberdust.testbedlistener.controller=INFO,ControllerFileAppender
+log4j.logger.eu.uberdust.testbedlistener.datacollector=INFO,CollectorFileAppender
+log4j.logger.eu.uberdust.testbedlistener.factory=INFO,ListenerFileAppender
+log4j.logger.eu.mksense=INFO,UtilFileAppender
+log4j.logger.eu.uberdust.testbedlistener.util=INFO,UtilFileAppender
 
-#log4j.logger.eu.uberdust.coap=INFO,stdout
-#log4j.logger.eu.uberdust.controller=INFO,stdout
-#log4j.logger.eu.uberdust.datacollector=INFO,stdout
-#log4j.logger.eu.uberdust.testbedlistener.nodeflasher=INFO,stdout
-
-#log4j.logger.eu.uberdust.util=INFO,stdout
-
-#log4j.logger.eu.uberdust.network=FATAL,stdout
-
-#log4j.logger.eu.uberdust.communication=FATAL,stdout
-
-#log4j.logger.eu.uberdust.TestbedListener=INFO,stdout
-
+#ROOT DEBUGER
+log4j.logger.eu.uberdust.testbedlistener=DEBUG,stdout
