--- a/src/main/resources/testbed-runtime-listener.properties.template
+++ b/src/main/resources/testbed-runtime-listener.properties.template
@@ -1,50 +1,45 @@
-#Backend Type: xbee fro XBee and tr for testbed runtime.
-backend.type=tr
+#####################################
+## General Application Configuration
+## Switch to 1 to run
+use.datacollector=1
+use.controller=1
 
-#XBee Configutation
-xbee.baudrate=
-xbee.port=
+#####################################
+##DataCollector Genera Configuration
+wisedb.testbedid=1
+uberdust.server=uberdust.cti.gr
+uberdust.port=80
+uberdust.basepath=/
+
+
+#####################################
+##Backend Type:
+## xbee, tr, coap, cmd
+backend.type=cmd
+
+
+
+#####################################
+##XBee Backend Configuration
+#XBEE mac address
 xbee.msb=6c
 xbee.lsb=c3
+#XBEE connection baudrate
+xbee.baudrate=
+#XBEE connection port
+xbee.port=
 
-#change to 1 to start the application
-use.datacollector=0
-use.nodeflasher=0
-use.controller=0
 
-#testbedruntime related properties
-#example values
-
+#####################################
+##TestbedRuntime Backend Configuration
+#DataCollector Configuration
 testbed.hostname=hercules.cti.gr
 testbed.overlay=1234
 testbed.prefix=urn:wisebed:ctitestbed:
 testbed.capability.prefix=urn:wisebed:node:capability:
+#Controller Configuration
 testbed.passwords=passwords.text
 testbed.snaa.endpointurl=http://hercules.cti.gr:8890/snaa
 testbed.rs.endpointurl=http://hercules.cti.gr:8889/rs
 testbed.sm.endpointurl=http://hercules.cti.gr:8888/sessions
 testbed.port=8885
-
-#datacollector related properties
-wisedb.testbedid=1
-uberdust.server=uberdust.cti.gr
-uberdust.port=80
-uberdust.basepath=/
-sensors.names=temperature,humidity,ir,co,co2,ch4,light,batterycharge,barometricpressure,light1,light2,light3,light4,pir,pressure
-sensors.prefixes=EM_T,EM_H,EM_I,SVal1:,SVal2:,SVal3:,EM_L,BA_C,EM_P,RL1,RL2,RL3,RL4,EM_E,CS
-device.Types=iSense::,airquality::,id::
-
-#xbeecollector related properties
-sensor.capabilities=temperature,humidity,ir,co,co2,ch4,light,batterycharge,barometricpressure,pir,pressure,test,description
-sensor.capabilities_index=0,3,2,4,5,6,1,11,7,13,99,100
-
-#nodeflasher related properties
-nodes.isense=urn:wisebed:ctitestbed:0x296,urn:wisebed:ctitestbed:0xcaa,urn:wisebed:ctitestbed:0x1c98,urn:wisebed:ctitestbed:0x295,urn:wisebed:ctitestbed:0x1b77,urn:wisebed:ctitestbed:0x9979,urn:wisebed:ctitestbed:0x153d,urn:wisebed:ctitestbed:0x585,urn:wisebed:ctitestbed:0x786a,urn:wisebed:ctitestbed:0xca3,urn:wisebed:ctitestbed:0x1cde
-nodes.telosb=urn:wisebed:ctitestbed:0x1c62,urn:wisebed:ctitestbed:0x68d1,urn:wisebed:ctitestbed:0x6f58,urn:wisebed:ctitestbed:0x1bee,urn:wisebed:ctitestbed:0x4f22,urn:wisebed:ctitestbed:0xfa4b,urn:wisebed:ctitestbed:0x1fdc,urn:wisebed:ctitestbed:0xd965,urn:wisebed:ctitestbed:0xefa,urn:wisebed:ctitestbed:0xf042,urn:wisebed:ctitestbed:0x712,urn:wisebed:ctitestbed:0x9112,urn:wisebed:ctitestbed:0xe852,urn:wisebed:ctitestbed:0x1ed4
-image.telosb=TelosBCollectorApp.ihex
-image.isense=iSenseCollectorApp.bin
-
-#datocontroller properties
-testbed.secretReservationKeys=urn:wisebed:ctitestbed:,C183C1779D6B680A223E2FB23EB43866
-testbed.nodeUrns=urn:wisebed:ctitestbed:0x1ccd
-
