refactoring Traffic Handler for passing messages

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -57,4 +57,5 @@ log4j.logger.eu.mksense=INFO,UtilFileAppender
 log4j.logger.eu.uberdust.testbedlistener.util=INFO,UtilFileAppender
 
 #ROOT DEBUGER
-log4j.logger.eu.uberdust.testbedlistener=DEBUG,stdout
+log4j.logger.eu.uberdust.testbedlistener.datacollector.parsers=DEBUG,stdout
+log4j.logger.eu.uberdust.testbedlistener.coap=DEBUG,stdout
