--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -47,6 +47,14 @@ log4j.appender.UtilFileAppender.MaxBackupIndex=1
 log4j.appender.UtilFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.UtilFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
+# Evaluation Logger
+log4j.appender.EvalFileAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.EvalFileAppender.File=logs/evaluation.log
+log4j.appender.EvalFileAppender.MaxFileSize=6MB
+log4j.appender.EvalFileAppender.MaxBackupIndex=3
+log4j.appender.EvalFileAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.EvalFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
+
 
 
 log4j.logger.eu.uberdust.testbedlistener.coap=INFO,CoapFileAppender
@@ -55,7 +63,7 @@ log4j.logger.eu.uberdust.testbedlistener.datacollector=INFO,CollectorFileAppende
 log4j.logger.eu.uberdust.testbedlistener.factory=INFO,ListenerFileAppender
 log4j.logger.eu.mksense=INFO,UtilFileAppender
 log4j.logger.eu.uberdust.testbedlistener.util=INFO,UtilFileAppender
+log4j.logger.eu.uberdust.Evaluator=INFO,EvalFileAppender
 
 #ROOT DEBUGER
-log4j.logger.eu.uberdust.testbedlistener.datacollector.parsers=DEBUG,stdout
-log4j.logger.eu.uberdust.testbedlistener.coap=DEBUG,stdout
+log4j.logger.eu.uberdust.testbedlistener=info,stdout
