--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,41 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>maven-replacer-plugin</artifactId>
+                <version>1.3.9</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <includes>
+                        <include>
+                            target/classes/*
+                        </include>
+                    </includes>
+                    <replacements>
+                        <replacement>
+                            <token>@@NAME@@</token>
+                            <value>${project.name}</value>
+                        </replacement>
+                        <replacement>
+                            <token>@@BUILD@@</token>
+                            <value>${BUILD_NUMBER}</value>
+                        </replacement>
+                        <replacement>
+                            <token>@@VERSION@@</token>
+                            <value>${project.version}</value>
+                        </replacement>
+                    </replacements>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
