--- a/pom.xml
+++ b/pom.xml
@@ -181,10 +181,13 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <excludes>
-                    <exclude>*properties*</exclude>
-                    <exclude>*xml*</exclude>
-                </excludes>
+                <!--<excludes>-->
+                    <!--<exclude>*properties*</exclude>-->
+                    <!--<exclude>*xml*</exclude>-->
+                <!--</excludes>-->
+                <includes>
+                    <include>version.properties</include>
+                </includes>
                 <filtering>true</filtering>
             </resource>
         </resources>
