use new thread to notify uberdust

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -55,6 +55,13 @@ log4j.appender.EvalFileAppender.MaxBackupIndex=3
 log4j.appender.EvalFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.EvalFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
+# Evaluation Logger
+log4j.appender.IncFileAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.IncFileAppender.File=logs/incoming.log
+log4j.appender.IncFileAppender.MaxFileSize=6MB
+log4j.appender.IncFileAppender.MaxBackupIndex=3
+log4j.appender.IncFileAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.IncFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 
 
 log4j.logger.eu.uberdust.testbedlistener.coap=INFO,CoapFileAppender
@@ -67,3 +74,4 @@ log4j.logger.eu.uberdust.Evaluator=INFO,EvalFileAppender
 
 #ROOT DEBUGER
 log4j.logger.eu.uberdust.testbedlistener=info,stdout
+log4j.logger.eu.uberdust.testbedlistener.coap.viewer=INFO,IncFileAppender
