work on xbee-tr collector at the same time

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -11,4 +11,4 @@ log4j.appender.stdout.Threshold=trace
 #log4j.logger.eu.uberdust.devicedriver=INFO,stdout
 #log4j.logger.eu.uberdust.TestbedListener=INFO,stdout
 #log4j.logger.eu.uberdust.communication.websocket.command=INFO,stdout
-log4j.logger.eu.uberdust=DEBUG,stdout
+log4j.logger.eu.uberdust=INFO,stdout
