--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,11 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/ExampleClient.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>org.fusesource.mqtt-client</groupId>
+            <artifactId>mqtt-client</artifactId>
+            <version>1.4</version>
+        </dependency>
 
     </dependencies>
 
