--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <artifactId>NetworkManager</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>uberdust</groupId>
+            <artifactId>UberdustInterface</artifactId>
+            <version>1.0</version>
+        </dependency>
 
         <dependency>
             <groupId>log4j</groupId>
@@ -167,6 +172,11 @@
             <groupId>org.fusesource.mqtt-client</groupId>
             <artifactId>mqtt-client</artifactId>
             <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
         </dependency>
 
     </dependencies>
