--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,7 @@
         <dependency>
             <groupId>org.fusesource.mqtt-client</groupId>
             <artifactId>mqtt-client</artifactId>
-            <version>1.4</version>
+            <version>[1.4,)</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
