--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,7 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
+                    <include>log4j.properties</include>
                     <include>version.properties</include>
                 </includes>
                 <filtering>true</filtering>
