--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
@@ -183,6 +182,12 @@
             <artifactId>quartz</artifactId>
             <version>2.1.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.saucelabs.selenium</groupId>
+            <artifactId>sauce-ondemand-driver</artifactId>
+            <version>1.2</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -226,16 +231,12 @@
                     <skipTests>false</skipTests>
                 </configuration>
             </plugin>
-
+<!--
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
                     <descriptors>
-                        <descriptor>assemblies/tr-listener-assembly.xml</descriptor>
-                        <descriptor>assemblies/cmd-listener-assembly.xml</descriptor>
-                        <descriptor>assemblies/xbee-listener-assembly.xml</descriptor>
-                        <descriptor>assemblies/coap-listener-assembly.xml</descriptor>
                     </descriptors>
                 </configuration>
                 <executions>
@@ -251,7 +252,7 @@
                     </execution>
                 </executions>
             </plugin>
-
+-->
             <plugin>
                 <groupId>org.dstovall</groupId>
                 <artifactId>onejar-maven-plugin</artifactId>
