--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,57 +5,51 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-log4j.appender.stdout.Threshold=error
 
 # Listener logger - used to log messages of the listener app
 log4j.appender.ListenerFileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.ListenerFileAppender.File=logs/listener.log
-log4j.appender.ListenerFileAppender.MaxFileSize=5MB
+log4j.appender.ListenerFileAppender.MaxFileSize=25MB
 log4j.appender.ListenerFileAppender.MaxBackupIndex=2
 log4j.appender.ListenerFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.ListenerFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-log4j.appender.ListenerFileAppender.Threshold=error
 
 # Listener logger - used to log messages of the listener app
 log4j.appender.CollectorFileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.CollectorFileAppender.File=logs/collector.log
-log4j.appender.CollectorFileAppender.MaxFileSize=5MB
+log4j.appender.CollectorFileAppender.MaxFileSize=25MB
 log4j.appender.CollectorFileAppender.MaxBackupIndex=2
 log4j.appender.CollectorFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.CollectorFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-log4j.appender.CollectorFileAppender.Threshold=error
 
 # Listener logger - used to log messages of the listener app
 log4j.appender.ControllerFileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.ControllerFileAppender.File=logs/controller.log
-log4j.appender.ControllerFileAppender.MaxFileSize=5MB
+log4j.appender.ControllerFileAppender.MaxFileSize=25MB
 log4j.appender.ControllerFileAppender.MaxBackupIndex=2
 log4j.appender.ControllerFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.ControllerFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-log4j.appender.ControllerFileAppender.Threshold=error
 
 # Listener logger - used to log messages of the listener app
 log4j.appender.CoapFileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.CoapFileAppender.File=logs/coap.log
-log4j.appender.CoapFileAppender.MaxFileSize=5MB
+log4j.appender.CoapFileAppender.MaxFileSize=25MB
 log4j.appender.CoapFileAppender.MaxBackupIndex=2
 log4j.appender.CoapFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.CoapFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-log4j.appender.CoapFileAppender.Threshold=error
 
 # Listener logger - used to log messages of the listener app
 log4j.appender.UtilFileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.UtilFileAppender.File=logs/util.log
-log4j.appender.UtilFileAppender.MaxFileSize=1MB
+log4j.appender.UtilFileAppender.MaxFileSize=25MB
 log4j.appender.UtilFileAppender.MaxBackupIndex=1
 log4j.appender.UtilFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.UtilFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-log4j.appender.UtilFileAppender.Threshold=error
 
 # Evaluation Logger
 log4j.appender.EvalFileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.EvalFileAppender.File=logs/evaluation.log
-log4j.appender.EvalFileAppender.MaxFileSize=6MB
+log4j.appender.EvalFileAppender.MaxFileSize=25MB
 log4j.appender.EvalFileAppender.MaxBackupIndex=3
 log4j.appender.EvalFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.EvalFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
@@ -63,7 +57,7 @@ log4j.appender.EvalFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}
 # Evaluation Logger
 log4j.appender.IncFileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.IncFileAppender.File=logs/incoming.log
-log4j.appender.IncFileAppender.MaxFileSize=6MB
+log4j.appender.IncFileAppender.MaxFileSize=25MB
 log4j.appender.IncFileAppender.MaxBackupIndex=3
 log4j.appender.IncFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.IncFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
@@ -75,8 +69,13 @@ log4j.logger.eu.uberdust.testbedlistener.datacollector=INFO,CollectorFileAppende
 log4j.logger.eu.uberdust.testbedlistener.factory=INFO,ListenerFileAppender
 log4j.logger.eu.mksense=INFO,UtilFileAppender
 log4j.logger.eu.uberdust.testbedlistener.util=INFO,UtilFileAppender
+log4j.logger.org.quartz=INFO,UtilFileAppender
 log4j.logger.eu.uberdust.Evaluator=INFO,EvalFileAppender
 
+
+
+
+
 #ROOT DEBUGER
-log4j.logger.eu.uberdust.testbedlistener=info,stdout
-log4j.logger.eu.uberdust.testbedlistener.coap.viewer=INFO,IncFileAppender
+#log4j.logger.eu.uberdust.testbedlistener=info,stdout
+#log4j.logger.eu.uberdust.testbedlistener.coap.viewer=INFO,IncFileAppender
