--- a/pom.xml
+++ b/pom.xml
@@ -17,22 +17,20 @@
     </properties>
 
     <repositories>
+
         <repository>
             <id>maven2-repository.dev.java.net</id>
             <name>Java.net Repository for Maven</name>
             <url>http://download.java.net/maven/2/</url>
             <layout>default</layout>
         </repository>
+
         <repository>
             <id>codehaus</id>
             <name>Maven Codehaus repository</name>
             <url>http://repository.codehaus.org/</url>
         </repository>
-        <repository>
-            <id>java.net</id>
-            <name>java.net</name>
-            <url>http://download.java.net/maven/2/</url>
-        </repository>
+
         <repository>
             <id>repository.ru1</id>
             <url>http://ru1.cti.gr/maven</url>
@@ -41,77 +39,33 @@
             </snapshots>
             <layout>default</layout>
         </repository>
-        <repository>
-            <id>itm-maven-repository-releases</id>
-            <url>http://www.itm.uni-luebeck.de/projects/maven/releases/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
 
-        <repository>
-            <id>itm-maven-repository-snapshots</id>
-            <url>http://www.itm.uni-luebeck.de/projects/maven/snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
     </repositories>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-pmd-plugin</artifactId>
-            <version>2.7</version>
-        </dependency>
-        <dependency>
-            <groupId>uberdust</groupId>
-            <artifactId>NetworkManager</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>uberdust</groupId>
-            <artifactId>UberdustInterface</artifactId>
-            <version>1.1-SNAPSHOT</version>
-        </dependency>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>onejar-maven-plugin.googlecode.com</id>
+            <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
+        </pluginRepository>
+    </pluginRepositories>
 
+    <distributionManagement>
+        <!-- use the following if you're not using a snapshot version. -->
+        <repository>
+            <id>repository.ru1</id>
+            <name>Ru1 Repo</name>
+            <url>scp://ru1.cti.gr/srv/maven</url>
+        </repository>
+
+    </distributionManagement>
+
+    <dependencies>
+
+        <!--LOGGING-->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-websocket</artifactId>
-            <version>${jetty-version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-            <version>${jetty-version}</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>2.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.netty</groupId>
-            <artifactId>netty</artifactId>
-            <version>3.2.4.Final</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -133,33 +87,27 @@
             <artifactId>jcl-over-slf4j</artifactId>
             <version>1.6.1</version>
         </dependency>
+
+        <!--PROTOBUFS-->
+        <dependency>
+            <groupId>uberdust</groupId>
+            <artifactId>NetworkManager</artifactId>
+            <version>1.0</version>
+        </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
             <version>2.4.1</version>
         </dependency>
+
+        <!--QUARTZ-->
         <dependency>
-            <groupId>de.uniluebeck.itm</groupId>
-            <artifactId>tr.runtime.socket-connector</artifactId>
-            <version>0.6.1</version>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.1.7</version>
         </dependency>
-        <dependency>
-            <groupId>de.uniluebeck.itm</groupId>
-            <artifactId>tr.iwsn-server</artifactId>
-            <version>0.8.5</version>
-        </dependency>
-        <dependency>
-            <groupId>de.uniluebeck.itm</groupId>
-            <artifactId>tr.scripting-client</artifactId>
-            <version>0.8.1</version>
-        </dependency>
-        <dependency>
-            <groupId>mksense</groupId>
-            <artifactId>XbeeLib</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.build.directory}/../lib/XbeeLib-1.jar</systemPath>
-        </dependency>
+
+        <!--COAP V8-->
         <dependency>
             <groupId>californium</groupId>
             <artifactId>californium</artifactId>
@@ -167,39 +115,36 @@
             <scope>system</scope>
             <systemPath>${project.build.directory}/../lib/ExampleClient.jar</systemPath>
         </dependency>
+
+        <!--MQTT-->
         <dependency>
             <groupId>org.fusesource.mqtt-client</groupId>
             <artifactId>mqtt-client</artifactId>
             <version>[1.4,)</version>
         </dependency>
+
+        <!--SENSORFLARE-->
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20090211</version>
-        </dependency>
-        <dependency>
-            <groupId>org.quartz-scheduler</groupId>
-            <artifactId>quartz</artifactId>
-            <version>2.1.7</version>
-        </dependency>
-        <dependency>
-            <groupId>com.saucelabs.selenium</groupId>
-            <artifactId>sauce-ondemand-driver</artifactId>
-            <version>1.2</version>
+            <groupId>com.sensorflare</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--REPORTING-->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-pmd-plugin</artifactId>
+            <version>2.7</version>
+        </dependency>
+
+        <!--TESTING-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+        </dependency>
 
     </dependencies>
-
-    <distributionManagement>
-        <!-- use the following if you're not using a snapshot version. -->
-        <repository>
-            <id>repository.ru1</id>
-            <name>Ru1 Repo</name>
-            <url>scp://ru1.cti.gr/srv/maven</url>
-        </repository>
-
-    </distributionManagement>
 
 
     <build>
@@ -231,28 +176,7 @@
                     <skipTests>false</skipTests>
                 </configuration>
             </plugin>
-<!--
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.3</version>
-                <configuration>
-                    <descriptors>
-                    </descriptors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <finalName>listener</finalName>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
--->
+
             <plugin>
                 <groupId>org.dstovall</groupId>
                 <artifactId>onejar-maven-plugin</artifactId>
@@ -276,8 +200,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -387,13 +311,5 @@
             </plugin>
         </plugins>
     </reporting>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>onejar-maven-plugin.googlecode.com</id>
-            <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
-        </pluginRepository>
-    </pluginRepositories>
-
 </project>
 
