change to the 64bit addressing mode for the gateway devices

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,3 +1,4 @@
+
 log4j.rootLogger=ERROR
 
 ### direct log messages to stdout ###
@@ -5,77 +6,15 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
+log4j.appender.stdout.Threshold=trace
 
-# Listener logger - used to log messages of the listener app
-log4j.appender.ListenerFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.ListenerFileAppender.File=logs/listener.log
-log4j.appender.ListenerFileAppender.MaxFileSize=25MB
-log4j.appender.ListenerFileAppender.MaxBackupIndex=2
-log4j.appender.ListenerFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.ListenerFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-
-# Listener logger - used to log messages of the listener app
-log4j.appender.CollectorFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.CollectorFileAppender.File=logs/collector.log
-log4j.appender.CollectorFileAppender.MaxFileSize=25MB
-log4j.appender.CollectorFileAppender.MaxBackupIndex=2
-log4j.appender.CollectorFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.CollectorFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-
-# Listener logger - used to log messages of the listener app
-log4j.appender.ControllerFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.ControllerFileAppender.File=logs/controller.log
-log4j.appender.ControllerFileAppender.MaxFileSize=25MB
-log4j.appender.ControllerFileAppender.MaxBackupIndex=2
-log4j.appender.ControllerFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.ControllerFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-
-# Listener logger - used to log messages of the listener app
-log4j.appender.CoapFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.CoapFileAppender.File=logs/coap.log
-log4j.appender.CoapFileAppender.MaxFileSize=25MB
-log4j.appender.CoapFileAppender.MaxBackupIndex=2
-log4j.appender.CoapFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.CoapFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-
-# Listener logger - used to log messages of the listener app
-log4j.appender.UtilFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.UtilFileAppender.File=logs/util.log
-log4j.appender.UtilFileAppender.MaxFileSize=25MB
-log4j.appender.UtilFileAppender.MaxBackupIndex=1
-log4j.appender.UtilFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.UtilFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-
-# Evaluation Logger
-log4j.appender.EvalFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.EvalFileAppender.File=logs/evaluation.log
-log4j.appender.EvalFileAppender.MaxFileSize=25MB
-log4j.appender.EvalFileAppender.MaxBackupIndex=3
-log4j.appender.EvalFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.EvalFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-
-# Evaluation Logger
-log4j.appender.IncFileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.IncFileAppender.File=logs/incoming.log
-log4j.appender.IncFileAppender.MaxFileSize=25MB
-log4j.appender.IncFileAppender.MaxBackupIndex=3
-log4j.appender.IncFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.IncFileAppender.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
-
-
-log4j.logger.eu.uberdust.testbedlistener.coap=INFO,CoapFileAppender
-log4j.logger.eu.uberdust.testbedlistener.controller=INFO,ControllerFileAppender
-log4j.logger.eu.uberdust.testbedlistener.datacollector=INFO,CollectorFileAppender
-log4j.logger.eu.uberdust.testbedlistener.factory=INFO,ListenerFileAppender
-log4j.logger.eu.mksense=INFO,UtilFileAppender
-log4j.logger.eu.uberdust.testbedlistener.util=INFO,UtilFileAppender
-log4j.logger.org.quartz=INFO,UtilFileAppender
-log4j.logger.eu.uberdust.Evaluator=INFO,EvalFileAppender
+#log4j.logger.eu.uberdust.testbedlistener.controller=INFO,stdout
+#log4j.logger.eu.uberdust.devicedriver=INFO,stdout
+#log4j.logger.eu.uberdust.TestbedListener=INFO,stdout
+#log4j.logger.eu.uberdust.communication.websocket.command=INFO,stdout
+log4j.logger.eu.uberdust.testbedlistener=INFO,stdout
+log4j.logger.com.sensorflare=INFO,stdout
 
 
 
 
-
-#ROOT DEBUGER
-#log4j.logger.eu.uberdust.testbedlistener=info,stdout
-#log4j.logger.eu.uberdust.testbedlistener.coap.viewer=INFO,IncFileAppender
