--- a/log4j.properties.template
+++ b/log4j.properties.template
@@ -7,8 +7,9 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d{ISO8601}] %5p %c{1}:%L - %m%n
 log4j.appender.stdout.Threshold=trace
 
-#log4j.logger.eu.uberdust.testbedlistener.controller=INFO,stdout
-#log4j.logger.eu.uberdust.devicedriver=INFO,stdout
-#log4j.logger.eu.uberdust.TestbedListener=INFO,stdout
-#log4j.logger.eu.uberdust.communication.websocket.command=INFO,stdout
-log4j.logger.eu.uberdust=INFO,stdout
+log4j.logger.eu.uberdust.testbedlistener=INFO,stdout
+
+
+
+
+
